--- a/css/style.css
+++ b/css/style.css
@@ -1,23 +1,22 @@
 @import url('https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap');
 
 *{
-    box-sizing: border-box;
-    margin: 0;
-    padding: 0;
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
   }
 body{
   width: 100vw;
   height: 100vh;
 }
 .container{
-    font-family: 'Press Start 2P', sans-serif;
-    display: flex;
-    flex-direction: column;
-    width: 100%;
-    height: 100%;
-    /* background-color: rgb(250,232,189); */
-    background-color: rgb(194,220,193);  
-    padding-top: 10px;
+  font-family: 'Press Start 2P', sans-serif;
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  height: 100%;
+  background-color: rgb(194,220,193);  
+  padding-top: 10px;
 }
 .header{                 
   display: flex;
@@ -27,27 +26,23 @@ body{
   background: url(https://c4.wallpaperflare.com/wallpaper/309/93/127/pokemon-minimalistic-bulbasaur-pikachu-squirtle-sepia-backgrounds-charmander-starter-1920x1080-wa-anime-pokemon-hd-art-wallpaper-preview.jpg);
   background-repeat: no-repeat;
   background-position: center;
-  /* border-radius: 160%; */
   padding: 10px;
   background-color: rgb(250,232,189);
   border: 7px solid rgb(230,132,55,0.2);
 }
 .title{
-    width: 100%;
-    height: 50%;
-    /* background-color: #4eb151; */
-    text-align: center;
-    color: rgb(212,175,29);
-    font-size: 25px;
-    margin: 0 0 10px 15px;  
+  width: 100%;
+  height: 50%;
+  text-align: center;
+  color: rgb(212,175,29);
+  font-size: 25px;
+  margin: 0 0 10px 15px;  
 }
 .search{
-    width: 100%;
-    height: 50%;
-    /* background-color: #34cb39; */
-    text-align: center;
-    /* padding: 45px; */
-    margin-top: 70px;
+  width: 100%;
+  height: 50%;
+  text-align: center;
+  margin-top: 70px;
 }
 #nameSearch{
  padding: 6px;
@@ -59,45 +54,40 @@ body{
   padding-left: 15px;
 }
 .info{
-    display: flex;
-    width: 100vw;
-    height: 600px;
-    margin-top: 0;
-    padding-top: 20px;
-    border-top: 7px solid rgb(180, 219, 179);
-    /* background-color: brown; */
+  display: flex;
+  width: 100vw;
+  height: 600px;
+  margin-top: 0;
+  padding-top: 20px;
+  border-top: 7px solid rgb(180, 219, 179);
 }
 .profile{
-    display: flex;
-    flex-direction: column;
-    width: 40vw;
-    height: 600px;
-    /* background-color: #619e97; */
+  display: flex;
+  flex-direction: column;
+  width: 40vw;
+  height: 600px;
 }
 .nameClass{
-    width: 90%;
-    height: 10%;
-    background-color: rgb(230,132,55,0.4);
-    border: 7px solid rgb(230,132,55,0.4);
-    border-radius: 20px;
-    text-align: center;
-    text-transform: uppercase;
-    font-size: 20px;
-    margin: 0 auto;
-    padding: 10px;
-    color: rgba(180,14,27);
-        /* (how to add empty space on right side- between ..name and .data) */
+  width: 90%;
+  height: 10%;
+  background-color: rgb(230,132,55,0.4);
+  border: 7px solid rgb(230,132,55,0.4);
+  border-radius: 20px;
+  text-align: center;
+  text-transform: uppercase;
+  font-size: 20px;
+  margin: 0 auto;
+  padding: 10px;
+  color: rgba(180,14,27);
 }
 .picture{
-    display: flex;
-    justify-content: center;
-    width: 70%;
-    height: 60%;
-    /* background-color:rgb(250,241,190); */
-    border-radius: 150px;
-    margin: 10px auto;
-    position: relative;
-    /* transition: transform .9s; */
+  display: flex;
+  justify-content: center;
+  width: 70%;
+  height: 60%;
+  border-radius: 150px;
+  margin: 10px auto;
+  position: relative;
 }
 #pokemonBack{
   position: absolute;
@@ -105,49 +95,40 @@ body{
   width: 100%;
   top: 10px;
   margin: auto;
+  border-radius: 100%;
   
 }
 #pokemonFront{
   height: 100%;
   width: 100%;
   margin: auto;
-  /* opacity: 0; */
   transition: opacity 0.7s ease;
-    /* how to move image in center of .picture div */
+  border-radius: 100%;
 }
 .data-moves{
-    display: flex;
-    flex-direction: column;
-    width: 60vw;
-    height: 600px;
-    color: rgb(59,103,53);
-    /* background-color: #8657a8; */
-    margin-right: 10px;
+  display: flex;
+  flex-direction: column;
+  width: 60vw;
+  height: 600px;
+  color: rgb(59,103,53);
+  margin-right: 10px;
 }
 .data{
-    width: 100%;
-    height: 40%;
-    /* background-color: rgb(186,216,187,0.5); */
-    border: 7px solid rgb(156,190,107);
-    border-radius: 20px;
-    /* margin-right: 10px;     */
-    padding: 0px; 
-    margin: 0 10px 10px 0;  
-      /* why does changing margin shift it to the right- so it sticks out of page window. */
+  width: 100%;
+  height: 40%;
+  border: 7px solid rgb(156,190,107);
+  border-radius: 20px;
+  padding: 0px; 
+  margin: 0 10px 10px 0;  
 }
 .moves{
   display: flex;
   flex-direction: row;
   width: 100%;
   height: 60%;
-  
-  /* background-color: red; */
-    /* margin: 10px 0 10px 0;
-    padding-top: 20px; */
 }
 .base{
   width:55%;
-  /* height: 50%; */
   background-color: rgb(186,216,187,0.5);
   border: 7px solid rgb(156,190,107);
   border-radius: 20px;
@@ -156,12 +137,9 @@ body{
 }
 .special{
   width:45%;
-  /* height: 50%; */
   background-color: rgb(186,216,187,0.5);
   border: 7px solid rgb(156,190,107);
   border-radius: 20px;
-  /* padding-left: 10px;
-  padding-top: 10px; */
 }
 li, #typeId, #heightId, #weightId{
   margin: 15px; 
@@ -178,22 +156,3 @@ li, #typeId, #heightId, #weightId{
 }
 
 
-/* #baseHead{
-  margin: 10px 5px;
-}
-#specialHead{
-  margin: 10px 5px; 
-} */
-  /* Does kebabcase don't work #ability-one, #ability-two, #ability-three {}
-  Why does .bioData not work?
-
-
-    /* mobile first - single column */
-    /* grid-template-columns: 1fr;
-    grid-template-rows: 50px 30px auto 100px;
-    grid-template-areas: 
-      "hdr"
-      "ftr"
-      "content"
-      "side";
-  }  */
