--- a/css/style.css
+++ b/css/style.css
@@ -118,7 +118,7 @@ body{
   height: 40%;
   border: 7px solid rgb(156,190,107);
   border-radius: 20px;
-  padding: 0px; 
+  padding: 5px; 
   margin: 0 10px 10px 0;  
 }
 .moves{
@@ -153,4 +153,71 @@ li, #typeId, #heightId, #weightId{
 }
 .hide{
   opacity: 0;
+}
+
+@media screen and (max-width:450px){
+  *{
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+    }
+  body{
+    margin:0;
+    padding: 0;
+    border: 0;
+    outline: 0;
+    width: 100%;
+    height: 100%;
+  }
+  .title{
+    font-size: 20px;
+  }
+  .info{
+    display: flex;
+    flex-direction: column;
+    width: 100vw;
+    height: 900px;
+    padding-top: 10px;
+  }
+  .profile{
+    display: flex;
+    flex-direction: column;
+    width: 70vw;
+    height: 30%;
+    margin-left: 50px;
+    /* background-color: white; */
+    }
+  .nameClass{
+    height: 30%;
+    font-size: 16px;
+    color: rgb(143, 37, 46);
+  }
+  .picture{
+    width: 60%;
+    height: 150px;
+    margin: 0 50px 10px 50px;
+  }
+  .data-moves{
+    width: 80vw;
+    height: 80%;
+    margin-left: 40px;
+  }
+  .data{
+    padding-left: 5px; 
+   height: 30%;
+  }
+  .moves{
+    height: 500px;
+    display: flex;
+    flex-direction: column;
+  }
+  .base{
+    width:100%;
+    margin-bottom: 10px;
+  }
+  .special{
+    width:100%;
+    padding: 5px;
+    border-radius: 20px;
+  }
 }
